# peniwallet-contracts

./: .gitignore  ape-config.yaml  brownie-config.yaml  makefile  pyproject.toml  sca.txt
contracts/: Peniwallet.sol  Router.sol  dsa.sol  erc20mock.sol  fees.sol  verifier.sol
scripts/: deploy.py  main.py  signer.py
tests/: addresses.txt  conftest.py  eip712.py  test_admin.py  test_fees.py  test_gas.py  test_peniwallet.py  test_spray.py  test_swap.py  test_transfer.py  test_verifier.py
